add vscode plugins

--- a/roles/common/templates/settings.json.j2
+++ b/roles/common/templates/settings.json.j2
@@ -3,5 +3,11 @@
     "workbench.startupEditor": "none",
     "go.alternateTools": {
         "go": "{{ ansible_env['HOME'] }}/.linuxbrew/bin/go"
-    } 
+    },
+    "redhat.telemetry.enabled": false,
+    "vs-kubernetes": {
+        "vscode-kubernetes.helm-path.linux": "/home/irqoff/.linuxbrew/bin/helm",
+        "vscode-kubernetes.kubectl-path.linux": "/home/irqoff/.linuxbrew/bin/kubectl",
+        "vscode-kubernetes.minikube-path.linux": "/home/irqoff/.linuxbrew/bin/minikube"
+    }
 }
