remove absolute path to home dir

--- a/roles/common/templates/settings.json.j2
+++ b/roles/common/templates/settings.json.j2
@@ -6,8 +6,8 @@
     },
     "redhat.telemetry.enabled": false,
     "vs-kubernetes": {
-        "vscode-kubernetes.helm-path.linux": "/home/irqoff/.linuxbrew/bin/helm",
-        "vscode-kubernetes.kubectl-path.linux": "/home/irqoff/.linuxbrew/bin/kubectl",
-        "vscode-kubernetes.minikube-path.linux": "/home/irqoff/.linuxbrew/bin/minikube"
+        "vscode-kubernetes.helm-path.linux": "{{ ansible_env['HOME'] }}/.linuxbrew/bin/helm",
+        "vscode-kubernetes.kubectl-path.linux": "{{ ansible_env['HOME'] }}/.linuxbrew/bin/kubectl",
+        "vscode-kubernetes.minikube-path.linux": "{{ ansible_env['HOME'] }}/.linuxbrew/bin/minikube"
     }
 }
